Creating a new clean file to continue working on it

--- a/Splitter.ipynb
+++ b/Splitter.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e8d1df09",
+   "id": "9aaf83bf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T04:58:29.719053Z",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae0e655e",
+   "id": "4639febf",
    "metadata": {},
    "source": [
     "Collecting ffmpeg-python\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "d4c424d0",
+   "id": "2aecd71f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T18:12:08.730142Z",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "314f5602",
+   "id": "e92e0130",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:55:48.339786Z",
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f898c72e",
+   "id": "4ef6079d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T04:58:32.445693Z",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffa691ee",
+   "id": "9ba9a0e8",
    "metadata": {},
    "source": [
     "### Finding silence and intervals, from this post\n",
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6afbc3ca",
+   "id": "7ebd2efd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:11:20.064001Z",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "494551b5",
+   "id": "276662ce",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:20:08.507528Z",
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daea950b",
+   "id": "9f62d63c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:13:31.045131Z",
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6d1553a4",
+   "id": "b1e2dec2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:58:30.128457Z",
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1304d55c",
+   "id": "705cdf43",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:58:49.303513Z",
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e49a50a",
+   "id": "bd09c4d5",
    "metadata": {},
    "source": [
     "It appears that there are 3 lines at the end of outputs that are not related to `silencedetect` \n",
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f898ae1c",
+   "id": "c369ed41",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T17:55:32.470847Z",
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "229a0769",
+   "id": "b9232589",
    "metadata": {},
    "source": [
     "## Splitting\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "120b1866",
+   "id": "ddb1c55d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T18:05:50.245191Z",
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54aaf3b4",
+   "id": "503dc3be",
    "metadata": {},
    "source": [
     "We need to split at the middle of the silence period,\n",
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "908c796a",
+   "id": "099bbdaa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T18:07:53.975151Z",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3944f9de",
+   "id": "7b030da1",
    "metadata": {},
    "source": [
     "looping through the `silence_mid` to find the neasest value to each of our splitting points\n",
@@ -713,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "5bdb917b",
+   "id": "809af223",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T20:12:11.155156Z",
@@ -742,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "edc69798",
+   "id": "60b4f175",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T20:23:05.190585Z",
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04d3ba2f",
+   "id": "8170c296",
    "metadata": {},
    "source": [
     "getting an array of `silence_mid`"
@@ -778,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "1b1f35c8",
+   "id": "4672566b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T18:19:16.601393Z",
@@ -809,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "103eddb2",
+   "id": "157eddad",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T19:58:26.114834Z",
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50ff637d",
+   "id": "8c6b72d5",
    "metadata": {},
    "source": [
     "Getting the difference between each two intervals, to get the lengths of split files\n",
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "4ebcf0b9",
+   "id": "1a9c9886",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T20:30:04.727269Z",
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "7e554941",
+   "id": "f22dc7f2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T20:30:57.705476Z",
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a53ddf16",
+   "id": "4cf85c4f",
    "metadata": {},
    "source": [
     "### Merging small parts\n",
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "2dc7409e",
+   "id": "19931254",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:05:10.648582Z",
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "8d93d6ad",
+   "id": "cb3a3209",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:18:19.766735Z",
@@ -1000,36 +1000,36 @@
     }
    ],
    "source": [
-    "# Check each element for the forward round\n",
-    "def merge_small_durations(diff_arr, min_dur, max_dur):\n",
-    "    dur_array_forward = []\n",
-    "    flag_raised=False # the flag will be raised if we merges occur\n",
-    "    for i, dur in enumerate(diff_arr):\n",
-    "        if flag_raised: \n",
-    "            flag_raised=False\n",
-    "            continue\n",
-    "        if (dur < min_dur) & (dur > 0):\n",
-    "            if i + 1 < len(diff_arr):\n",
-    "                next_diff = diff_arr[i + 1]\n",
-    "#                 if next_diff==0:\n",
-    "#                     next_diff = diff_arr[i + 2]\n",
-    "                if dur + next_diff < max_dur:\n",
-    "                    # dur_array_forward.append(0)\n",
-    "                    dur_array_forward.append(dur + next_diff)\n",
-    "                    flag_raised=True\n",
-    "        else:\n",
-    "            dur_array_forward.append(dur)\n",
-    "    return dur_array_forward\n",
+    "# # Check each element for the forward round\n",
+    "# def merge_small_durations(diff_arr, min_dur, max_dur):\n",
+    "#     dur_array_forward = []\n",
+    "#     flag_raised=False # the flag will be raised if we merges occur\n",
+    "#     for i, dur in enumerate(diff_arr):\n",
+    "#         if flag_raised: \n",
+    "#             flag_raised=False\n",
+    "#             continue\n",
+    "#         if (dur < min_dur) & (dur > 0):\n",
+    "#             if i + 1 < len(diff_arr):\n",
+    "#                 next_diff = diff_arr[i + 1]\n",
+    "# #                 if next_diff==0:\n",
+    "# #                     next_diff = diff_arr[i + 2]\n",
+    "#                 if dur + next_diff < max_dur:\n",
+    "#                     # dur_array_forward.append(0)\n",
+    "#                     dur_array_forward.append(dur + next_diff)\n",
+    "#                     flag_raised=True\n",
+    "#         else:\n",
+    "#             dur_array_forward.append(dur)\n",
+    "#     return dur_array_forward\n",
     "\n",
     "\n",
-    "fwd_arr = merge_small_durations(difference_array, min_duration, max_duration)\n",
-    "fwd_arr"
+    "# fwd_arr = merge_small_durations(difference_array, min_duration, max_duration)\n",
+    "# fwd_arr"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "5c6008d0",
+   "id": "0dc5d98b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:18:28.474353Z",
@@ -1054,15 +1054,15 @@
     }
    ],
    "source": [
-    "bwd_arr = merge_small_durations(fwd_arr[::-1], min_duration,\n",
-    "                                max_duration)[::-1]\n",
-    "bwd_arr"
+    "# bwd_arr = merge_small_durations(fwd_arr[::-1], min_duration,\n",
+    "#                                 max_duration)[::-1]\n",
+    "# bwd_arr"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "49ed78ca",
+   "id": "43e3de2b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:18:40.614760Z",
@@ -1097,18 +1097,18 @@
     }
    ],
    "source": [
-    "# getting the modified success_array\n",
-    "print(success_array)\n",
-    "print(difference_array)\n",
-    "print(bwd_arr)\n",
+    "# # getting the modified success_array\n",
+    "# print(success_array)\n",
+    "# print(difference_array)\n",
+    "# print(bwd_arr)\n",
     "\n",
-    "list(zip(success_array, bwd_arr))\n"
+    "# list(zip(success_array, bwd_arr))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "e0f3434c",
+   "id": "e51e9fd5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:39:03.980250Z",
@@ -1143,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "4174c039",
+   "id": "028f279f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:43:20.670265Z",
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b203126",
+   "id": "1ad87855",
    "metadata": {},
    "source": [
     "`[53.2015355, 61.89206749, 59.554941, 72.389703, 107.9331359, 26.93460797, 39.67645550, 18.920410500]\n",
@@ -1193,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "4f3ebfce",
+   "id": "6c5a4a12",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:50:53.506677Z",
@@ -1226,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "fcf99b54",
+   "id": "3263db5f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:54:03.109870Z",
@@ -1258,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "b555a64a",
+   "id": "375680e7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:55:23.952568Z",
@@ -1287,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "be5e6fef",
+   "id": "d2e0df80",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:03:34.033308Z",
@@ -1314,15 +1314,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "29192c11",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 130,
+   "id": "a12c75d2",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T22:09:54.223838Z",
+     "start_time": "2022-03-17T22:09:54.208879Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[53.202, 115.094, 174.649, 247.038, 354.971]"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# adding a function to round values of a list\n",
     "def round_list_values(the_list, rounding=3):\n",
-    "    return list(np.round(the_list, rounding))"
+    "    return list(np.round(the_list, rounding))\n",
+    "\n",
+    "#Test\n",
+    "round_list_values(final_stops)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed1e825b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
