First success to split files to the unmonitored folder (Outputs)

--- a/Splitter_stage_2.ipynb
+++ b/Splitter_stage_2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5fd79c2f",
+   "id": "069dc7f8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:41:58.365168Z",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0f37683c",
+   "id": "3d50b24b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:41:58.380293Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a82a097f",
+   "id": "ade91762",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:41:58.395677Z",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ddf2ae9",
+   "id": "e73d8f2b",
    "metadata": {},
    "source": [
     "**Finding silence and intervals, from this post**\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bccf3fc9",
+   "id": "106ccf7c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:41:58.945460Z",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6131f191",
+   "id": "c571d116",
    "metadata": {},
    "source": [
     "**Finding silence values using RegeX**\n"
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6352bd29",
+   "id": "e7b8d8d3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:48:06.869136Z",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8082b6d5",
+   "id": "2e2bdc83",
    "metadata": {},
    "source": [
     "## Splitting\n",
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e12bf7c0",
+   "id": "1efdc1ff",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:48:09.460018Z",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93cee835",
+   "id": "b226186b",
    "metadata": {},
    "source": [
     "We need to split at the middle of the silence period,\n",
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5c37f3b6",
+   "id": "66f8b4b1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:48:15.960839Z",
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "621a9186",
+   "id": "41cb9055",
    "metadata": {},
    "source": [
     "Getting the file length\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "262ce6c2",
+   "id": "d5400d40",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:48:19.703457Z",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e428b2c8",
+   "id": "26721ec4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:48:21.610256Z",
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "871190cc",
+   "id": "2aa4d0a1",
    "metadata": {},
    "source": [
     "getting an array of `silence_mid`"
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "63d2d069",
+   "id": "c2fd7398",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:48:22.986859Z",
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "65b7da82",
+   "id": "b0d9c2b1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:48:24.338576Z",
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d67baac6",
+   "id": "08669151",
    "metadata": {},
    "source": [
     "Getting the nearest neighbor from the `silence_mid` to the `split_arr`\n",
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f71c6398",
+   "id": "9a45d420",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:51:08.628184Z",
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "918444c2",
+   "id": "1a926d69",
    "metadata": {},
    "source": [
     "Getting the difference between each two intervals, to get the lengths of split files\n",
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9ca65a27",
+   "id": "a26dad4b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:51:14.767538Z",
@@ -586,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a39312c3",
+   "id": "5f000fcb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:51:42.754815Z",
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c68ae7ad",
+   "id": "26621a74",
    "metadata": {},
    "source": [
     "### Merging small parts\n",
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "971d8b08",
+   "id": "ba6f4b17",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:53:06.006944Z",
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "36755590",
+   "id": "26ed707d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:53:07.211223Z",
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f9e4d48a",
+   "id": "0618f03d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:53:13.959511Z",
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1b450d3",
+   "id": "95537a0c",
    "metadata": {},
    "source": [
     "**Calculating final stops after merge**\n",
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "724cf71f",
+   "id": "7deeff6e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:53:18.068555Z",
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0c7b069",
+   "id": "bd16d878",
    "metadata": {},
    "source": [
     "**The final durations**"
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ce6ee74b",
+   "id": "e3d9b44a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:53:21.902016Z",
@@ -803,9 +803,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "22183696",
+   "metadata": {},
+   "source": [
+    "## Executing The splitting process\n",
+    "I found the **ffmpeg code** in this post:<br>\n",
+    "https://unix.stackexchange.com/a/545955/406518<br>\n",
+    "and found **how to execute ffmpeg commands via python** in this post:<br>\n",
+    "https://stackoverflow.com/a/42438502/5820024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "7a186e3a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-18T00:10:44.802451Z",
+     "start_time": "2022-03-18T00:10:44.798461Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# split_cmd = f\"ffmpeg -i {src} -af silencedetect=n=-30dB:d=0.25 -f null - \"\n",
+    "# ffmpeg -i input.mp3 -vn -c copy -f segment -segment_times 0,8,22 output%d.mp3\n",
+    "slice_cmd = f\"ffmpeg -i {src} -vn -c copy -f segment -segment_times 53,115,174,247,354 Outputs/output%d.mp3\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "65327e24",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-18T00:10:46.715714Z",
+     "start_time": "2022-03-18T00:10:46.540104Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.system(slice_cmd)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a81f6330",
+   "id": "71dd4a8e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -813,23 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f292355b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a37c690",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4bab268",
+   "id": "dc65b222",
    "metadata": {},
    "outputs": [],
    "source": []
