--- a/Splitter_stage_2.ipynb
+++ b/Splitter_stage_2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "069dc7f8",
+   "id": "16dcd6f1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:41:58.365168Z",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3d50b24b",
+   "id": "7347263a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:41:58.380293Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ade91762",
+   "id": "0c6f3960",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:41:58.395677Z",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e73d8f2b",
+   "id": "d808b426",
    "metadata": {},
    "source": [
     "**Finding silence and intervals, from this post**\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "106ccf7c",
+   "id": "e7db2a42",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:41:58.945460Z",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c571d116",
+   "id": "c35db8e9",
    "metadata": {},
    "source": [
     "**Finding silence values using RegeX**\n"
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e7b8d8d3",
+   "id": "681a2344",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:48:06.869136Z",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e2bdc83",
+   "id": "4989e0e5",
    "metadata": {},
    "source": [
     "## Splitting\n",
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1efdc1ff",
+   "id": "eebf195b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:48:09.460018Z",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b226186b",
+   "id": "ecc5bb91",
    "metadata": {},
    "source": [
     "We need to split at the middle of the silence period,\n",
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "66f8b4b1",
+   "id": "de1404b5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:48:15.960839Z",
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41cb9055",
+   "id": "50536d99",
    "metadata": {},
    "source": [
     "Getting the file length\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d5400d40",
+   "id": "08cba180",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:48:19.703457Z",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "26721ec4",
+   "id": "a47d266a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:48:21.610256Z",
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2aa4d0a1",
+   "id": "74e34e09",
    "metadata": {},
    "source": [
     "getting an array of `silence_mid`"
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c2fd7398",
+   "id": "95d4935a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:48:22.986859Z",
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b0d9c2b1",
+   "id": "21e9074f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:48:24.338576Z",
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08669151",
+   "id": "d6abc9f0",
    "metadata": {},
    "source": [
     "Getting the nearest neighbor from the `silence_mid` to the `split_arr`\n",
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9a45d420",
+   "id": "a38e2da6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:51:08.628184Z",
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a926d69",
+   "id": "89bfaea5",
    "metadata": {},
    "source": [
     "Getting the difference between each two intervals, to get the lengths of split files\n",
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a26dad4b",
+   "id": "7d9bb52f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:51:14.767538Z",
@@ -586,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5f000fcb",
+   "id": "03f76e80",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:51:42.754815Z",
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26621a74",
+   "id": "c6bc5b6f",
    "metadata": {},
    "source": [
     "### Merging small parts\n",
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ba6f4b17",
+   "id": "4c33aa88",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:53:06.006944Z",
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "26ed707d",
+   "id": "959f351d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:53:07.211223Z",
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0618f03d",
+   "id": "a483f339",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:53:13.959511Z",
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95537a0c",
+   "id": "be95b6fc",
    "metadata": {},
    "source": [
     "**Calculating final stops after merge**\n",
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7deeff6e",
+   "id": "98b13092",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:53:18.068555Z",
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd16d878",
+   "id": "f9561ce7",
    "metadata": {},
    "source": [
     "**The final durations**"
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e3d9b44a",
+   "id": "486fe0f3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:53:21.902016Z",
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22183696",
+   "id": "c66dadb5",
    "metadata": {},
    "source": [
     "## Executing The splitting process\n",
@@ -816,29 +816,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "7a186e3a",
+   "execution_count": 52,
+   "id": "7034c7ec",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-18T00:10:44.802451Z",
-     "start_time": "2022-03-18T00:10:44.798461Z"
+     "end_time": "2022-03-18T00:24:49.745089Z",
+     "start_time": "2022-03-18T00:24:49.734088Z"
     }
    },
    "outputs": [],
    "source": [
     "# split_cmd = f\"ffmpeg -i {src} -af silencedetect=n=-30dB:d=0.25 -f null - \"\n",
     "# ffmpeg -i input.mp3 -vn -c copy -f segment -segment_times 0,8,22 output%d.mp3\n",
-    "slice_cmd = f\"ffmpeg -i {src} -vn -c copy -f segment -segment_times 53,115,174,247,354 Outputs/output%d.mp3\""
+    "slice_cmd = f\"ffmpeg -i {src} -vn -c copy -f segment -segment_times 53,115,174,247,354 Outputs/output%d.mp3\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "65327e24",
+   "execution_count": 53,
+   "id": "27d82a98",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-18T00:10:46.715714Z",
-     "start_time": "2022-03-18T00:10:46.540104Z"
+     "end_time": "2022-03-18T00:24:52.366664Z",
+     "start_time": "2022-03-18T00:24:52.192382Z"
     }
    },
    "outputs": [
@@ -848,7 +848,72 @@
        "0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.system(slice_cmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f4e2184",
+   "metadata": {},
+   "source": [
+    "**SUCCESS!**\n",
+    "\n",
+    "Trying to put the list values automatically"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "b32826f3",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-18T00:24:04.765091Z",
+     "start_time": "2022-03-18T00:24:04.759134Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ffmpeg -i TestFile.mp3 -vn -c copy -f segment -segment_times 53.202, 115.094, 174.649, 247.038, 354.971 Outputs/output%d.mp3'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out_times = \", \".join(str(e) for e in final_stops)\n",
+    "slice_cmd = f\"ffmpeg -i {src} -vn -c copy -f segment -segment_times \"\n",
+    "slice_cmd += f\"{out_times} Outputs/output%d.mp3\"\n",
+    "slice_cmd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "7e549dbc",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-18T00:24:09.241850Z",
+     "start_time": "2022-03-18T00:24:09.144036Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,16 +924,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "71dd4a8e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 55,
+   "id": "be774482",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-18T00:26:25.469538Z",
+     "start_time": "2022-03-18T00:26:25.290121Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slice_cmd = f\"ffmpeg -i {src} -vn -c copy -f segment -segment_times 53.2,115.1,174.6,247.0,354.9 Outputs/output%d.mp3\"\n",
+    "os.system(slice_cmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05144b78",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-18T00:24:08.697608Z",
+     "start_time": "2022-03-18T00:24:08.681659Z"
+    }
+   },
+   "source": [
+    "**I realized that the times should not be separated by spaces**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "cfc9162a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-18T00:30:22.796667Z",
+     "start_time": "2022-03-18T00:30:22.615380Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out_times = \",\".join(str(e) for e in final_stops)\n",
+    "slice_cmd = f\"ffmpeg -i {src} -vn -c copy -f segment -segment_times \"\n",
+    "slice_cmd += f\"{out_times} Outputs/output%d.mp3\"\n",
+    "os.system(slice_cmd)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc65b222",
+   "id": "f988b290",
    "metadata": {},
    "outputs": [],
    "source": []
