Adding code to split all

--- a/Splitter_stage_3.ipynb
+++ b/Splitter_stage_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "80ddd4b9",
+   "id": "4f59b570",
    "metadata": {},
    "source": [
     "***This notebook for final functions and executions***"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bb9b08c4",
+   "id": "c466e248",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T02:47:17.220352Z",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "906fb388",
+   "id": "12defeef",
    "metadata": {},
    "source": [
     "## Combined functions"
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d507e4db",
+   "id": "635a252f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T02:47:19.412608Z",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ff71330a",
+   "id": "9622cc43",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T02:55:39.778348Z",
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "19f5c8a0",
+   "id": "13aab901",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T02:47:21.604866Z",
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d654bc65",
+   "id": "f99c28aa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T02:56:13.141726Z",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "690c39a0",
+   "id": "77c0c56c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T02:56:24.737339Z",
@@ -225,17 +225,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c33a3c8",
+   "id": "479867e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "float(ffmpeg.probe(src)['format']['duration'])"
+    "split_interval, min_duration, max_duration = 180, 30, 240\n",
+    "folder = \"X:/Music/RightlyGuidedCalifate/\"\n",
+    "for file_number in range(1, 108): # the last file is #107\n",
+    "    src = f\"{folder}RGC{file_number:03d}_.mp3\"\n",
+    "    result = f\"{folder}Outputs/RGC{file_number:03d}_%d.mp3\"\n",
+    "    print(file_number, end=\". \")\n",
+    "    split_audio_file(src, result, split_interval, min_duration, max_duration)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b97faafb",
+   "id": "13452c96",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -243,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d65ddcdf",
+   "id": "91779214",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -251,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39088848",
+   "id": "062c1c1b",
    "metadata": {},
    "outputs": [],
    "source": []
