Adding the source of mp3 tagging/metadata read and write

--- a/PyAudioTagger.ipynb
+++ b/PyAudioTagger.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7d54d660",
+   "id": "ed02887e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:27:29.563320Z",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6bf04149",
+   "id": "4049f1aa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:27:55.306026Z",
@@ -39,9 +39,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8058a109",
+   "metadata": {},
+   "source": [
+    "Found the method of **changing MP3 metadata** in this post: <br>\n",
+    "https://stackoverflow.com/a/34970600/5820024"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "485e1a21",
+   "id": "6df6e07b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:28:41.771524Z",
@@ -56,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0c71c72c",
+   "id": "ec800066",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:29:23.042011Z",
@@ -82,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bf15d778",
+   "id": "ebdd9f99",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:29:39.893529Z",
@@ -108,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6fc15cf6",
+   "id": "2569cf82",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:32:39.733535Z",
@@ -127,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3edb3058",
+   "id": "f045c754",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:38:48.653268Z",
@@ -162,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f926dac",
+   "id": "0a8c6ee3",
    "metadata": {},
    "outputs": [],
    "source": []
