--- a/PyAudioTagger.ipynb
+++ b/PyAudioTagger.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ed02887e",
+   "id": "212e1b9c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:27:29.563320Z",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4049f1aa",
+   "id": "1a13f1b7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:27:55.306026Z",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8058a109",
+   "id": "04224320",
    "metadata": {},
    "source": [
     "Found the method of **changing MP3 metadata** in this post: <br>\n",
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6df6e07b",
+   "id": "d2fa5cf0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:28:41.771524Z",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ec800066",
+   "id": "441fd07b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:29:23.042011Z",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ebdd9f99",
+   "id": "e57f72f4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:29:39.893529Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2569cf82",
+   "id": "a48f46c5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:32:39.733535Z",
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f045c754",
+   "id": "9056394d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:38:48.653268Z",
@@ -170,8 +170,226 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "75322a1e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-18T03:50:28.152736Z",
+     "start_time": "2022-03-18T03:50:28.116803Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Number</th>\n",
+       "      <th>EnName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Rightly Guided Caliphate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Sunnah of the RGCs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Prophet's Order of Caliphs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>MuhajirAnsarCaliphSelection</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Abu Bakr as-Siddiq the calif</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Number                        EnName\n",
+       "0       1      Rightly Guided Caliphate\n",
+       "1       2            Sunnah of the RGCs\n",
+       "2       3    Prophet's Order of Caliphs\n",
+       "3       4   MuhajirAnsarCaliphSelection\n",
+       "4       5  Abu Bakr as-Siddiq the calif"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=pd.read_csv(f'{folder}EnglishNames.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "593ffc76",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-18T03:51:51.541845Z",
+     "start_time": "2022-03-18T03:51:51.518906Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 'Rightly Guided Caliphate',\n",
+       " 1: 'Sunnah of the RGCs',\n",
+       " 2: \"Prophet's Order of Caliphs\",\n",
+       " 3: 'MuhajirAnsarCaliphSelection',\n",
+       " 4: 'Abu Bakr as-Siddiq the calif',\n",
+       " 5: 'Arabs apostate reasons',\n",
+       " 6: 'Osama bin Zaid army',\n",
+       " 7: 'Wars of apostasy',\n",
+       " 8: 'Yamama battle',\n",
+       " 9: 'The death of Fatima',\n",
+       " 10: 'Quran collection',\n",
+       " 11: 'Islamic conquests miracle',\n",
+       " 12: 'WhyIslamicConquestsSucceeds?',\n",
+       " 13: 'The islamic ethics of wars',\n",
+       " 14: 'Why Muslims conquer Persia?',\n",
+       " 15: 'Khalid, the sword of Allah',\n",
+       " 16: 'The road to confusion',\n",
+       " 17: 'open AlHira',\n",
+       " 18: 'Khalid facing the allies',\n",
+       " 19: \"Khalid's victories secret\",\n",
+       " 20: 'KhalidMostDangerousDecision',\n",
+       " 21: 'Fattouh Al-Sham begins',\n",
+       " 22: 'Amr ibn al-Aas in the Levant',\n",
+       " 23: 'Crossing AlSamawa desert',\n",
+       " 24: 'Road to Bosra & Ajnadayn',\n",
+       " 25: 'Iraq after Khalid',\n",
+       " 26: 'AbuBakrDeath&OmarSuccession',\n",
+       " 27: 'TheRightlyGuidedCaliph Omar ',\n",
+       " 28: 'The virtues of Omar ',\n",
+       " 29: 'OmarMobilizesToPersia',\n",
+       " 30: 'AbiObaidBinMasoudAl-Thaqafi',\n",
+       " 31: 'AbuObaid Al-Thaqafi to Iraq',\n",
+       " 32: 'Get out of the bridge crisis',\n",
+       " 33: 'Omar’sWill4UtbahBinGhazwan',\n",
+       " 34: 'The road to Qadisiyah',\n",
+       " 35: 'Al-Qadisiyah Battle Part1',\n",
+       " 36: 'Al-Qadisiyah Battle Part2',\n",
+       " 37: 'AlQadisiyah Battle thoughts',\n",
+       " 38: \"open AlMada'en\",\n",
+       " 39: 'Why did Omar Cry?',\n",
+       " 40: 'Persian resistance',\n",
+       " 41: 'StoppingFotouhFaresdecision',\n",
+       " 42: \"Omar' way building cities\",\n",
+       " 43: 'SunnahCommitment&StatePower',\n",
+       " 44: 'open Tustor',\n",
+       " 45: 'Why Muslims won in Tustur?',\n",
+       " 46: 'MuslimsMoralsOpeningTostor',\n",
+       " 47: 'Omar Court of Hormuzgan',\n",
+       " 48: 'SaadDismissal&HormzanAdvice',\n",
+       " 49: 'The road to Nahawand',\n",
+       " 50: 'The two armies of Nahawand',\n",
+       " 51: 'Nahawand Fateh Al Fotouh',\n",
+       " 52: 'Jizya in Islamic Sharia',\n",
+       " 53: 'Tribute (Jizya) in Persia',\n",
+       " 54: 'Fall of the Persian Empire',\n",
+       " 55: 'AlSham conquests beginning',\n",
+       " 56: 'dismission of Khalid',\n",
+       " 57: 'Between Omar and Khaled',\n",
+       " 58: 'MuslimsAfterDismissingKhalid',\n",
+       " 59: 'AlshamAfterKhaledDismissal',\n",
+       " 60: 'Battle of Fahal Beisan',\n",
+       " 61: 'Conquest of Damascus',\n",
+       " 62: 'The road to Yarmouk',\n",
+       " 63: 'The battle of Yarmouk',\n",
+       " 64: 'The Yarmouk battle plan',\n",
+       " 65: 'RomanLeaderIslam@Yarmouk',\n",
+       " 66: 'The Battle of Yarmouk round1',\n",
+       " 67: 'Details of Yarmouk Day',\n",
+       " 68: \"Between Yarmouk and Mu'tah\",\n",
+       " 69: 'Completing Fattouh Al Sham',\n",
+       " 70: 'The road to Jerusalem',\n",
+       " 71: 'Omar  in the Levant',\n",
+       " 72: 'conquest of Jerusalem',\n",
+       " 73: 'Q/A JerusalemConquest ',\n",
+       " 74: 'The Roman Siege of Homs',\n",
+       " 75: 'Plague of Emmaus 1',\n",
+       " 76: 'Plague of Emmaus 2',\n",
+       " 77: 'Plague of Emmaus end',\n",
+       " 78: 'Is Corona a plague?',\n",
+       " 79: 'Q/A plague vs Corona 1',\n",
+       " 80: 'Q/A plague vs Corona 2',\n",
+       " 81: 'Egypt conquest miracle',\n",
+       " 82: 'Egypt before Islam',\n",
+       " 83: 'The conquest of Egypt ',\n",
+       " 84: 'Amr, the Conqueror of Egypt',\n",
+       " 85: 'How do we write history?',\n",
+       " 86: 'The Fattouh book of Egypt',\n",
+       " 87: 'Narrators of Egypt conquest',\n",
+       " 88: 'DifferentOpinion 4 FatehMisr',\n",
+       " 89: 'Why Amr opened Egypt?',\n",
+       " 90: 'Amr conquerence of Sinai',\n",
+       " 91: 'Open Farma and Belbeis',\n",
+       " 92: 'The world in Egypt fath era',\n",
+       " 93: 'The road to Babylon',\n",
+       " 94: 'Zubair vision of Imara',\n",
+       " 95: 'Zubair, Miqdad and Obada',\n",
+       " 96: 'Alsabiqoon',\n",
+       " 97: 'How a man be like 1000',\n",
+       " 98: 'YoungMen=1000Men',\n",
+       " 99: 'Siege of Babylon',\n",
+       " 100: \"EgyptConqr.Army's reputation\",\n",
+       " 101: 'Negtn. Ubadah & al-Muqawqis',\n",
+       " 102: 'AlMuqawqis and Romans',\n",
+       " 103: 'The story of Hercules',\n",
+       " 104: 'The ProphetMessage to romans',\n",
+       " 105: 'Hercules mystery',\n",
+       " 106: 'Zubair & Miracle of Babylon'}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "english_names = df.EnName.to_dict()\n",
+    "english_names"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0a8c6ee3",
+   "id": "8565692e",
    "metadata": {},
    "outputs": [],
    "source": []
